wavefront/old/fitcycle-servicegraph-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: servicegraph-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fitcycle-servicegraph
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - servicegraph-gateway
  http:
  - match:
    - uri:
        exact: /servicegraph
    - uri:
        prefix: /servicegraph/*
    route:
    - destination:
        host: servicegraph
        port:
          number: 8088
